# futurisys-ml-deployment

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: preprocessing.py  schemas.py
db/: create_db.py  database.py  df_central.csv  models.py
docs/: model_doc.md  schema_db.md
model/: model_xgb.joblib
tests/: coverage_report.txt  test_api.py  test_model.py  test_placeholder.py  test_preprocessing.py  test_schemas.py
